Implemented Upload and partial download

--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,19 @@
 	    <artifactId>dropbox-core-sdk</artifactId>
 	    <version>3.0.1</version>
 	</dependency>
+	
+	<dependency>
+      <groupId>com.google.apis</groupId>
+      <artifactId>google-api-services-drive</artifactId>
+      <version>v3-rev67-1.22.0</version>
+    </dependency>
+    
+    <!-- https://mvnrepository.com/artifact/com.google.oauth-client/google-oauth-client-jetty -->
+	<dependency>
+	    <groupId>com.google.oauth-client</groupId>
+	    <artifactId>google-oauth-client-jetty</artifactId>
+	    <version>1.11.0-beta</version>
+	</dependency>
+    
   </dependencies>
 </project>
